# Flocode-Engineering-Dashboards-01-Solara

./: LICENSE  README.md  base_file.py  dockerfile  my_dashboard.py  newplot1  notebook.ipynb  pyproject.toml  requirements.txt  run_solara_server.bat  server_user_id.txt
app/: app.py  calculations.py
data/: annual_extremes.csv  daily_flows.csv  hydrometric-monthly-mean.csv  water_level.csv
