[tool.poetry]
name = "bridge river energy model"
version = "0.1.0"
description = "Energy Modelling App"
authors = ["James O'Reilly <joreilly@knightpiesold.com>"]
license = "Commercial"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.2.1"
solara = "^1.28.0"
matplotlib = "^3.8.3"
tabulate = "^0.9.0"
seaborn = "^0.13.2"
plotly = "^5.19.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
